# Graph-Classification-with-TDA

./: .gitignore  README.md  classification.py  classification_pers_image.ipynb  config.json  evaluate.py  extended_persistence.py  filtrations.py  images.py  merge_results.py  persistance_image_test.py  pyproject.toml  quick_demo.ipynb  run_evaluate.sh  run_evaluation.py  test_images_WPKI.ipynb  tutorial_pyper_filtration.ipynb
Datasets/: convert_graphs.py  convert_to_igraph.py
Datasets/preprocessed/BZR/: 000.pickle  001.pickle  002.pickle  003.pickle  004.pickle  005.pickle  006.pickle  007.pickle  008.pickle  009.pickle  010.pickle  011.pickle  012.pickle  013.pickle  014.pickle  015.pickle  016.pickle  017.pickle  018.pickle  019.pickle  020.pickle  021.pickle  022.pickle  023.pickle  024.pickle  025.pickle  026.pickle  027.pickle  028.pickle  029.pickle  030.pickle  031.pickle  032.pickle  033.pickle  034.pickle  035.pickle  036.pickle  037.pickle  038.pickle  039.pickle  (+365 more)
Datasets/preprocessed/COLLAB/: 0000.pickle  0002.pickle  0003.pickle  0005.pickle  0006.pickle  0009.pickle  0012.pickle  0014.pickle  0015.pickle  0016.pickle  0017.pickle  0018.pickle  0020.pickle  0021.pickle  0022.pickle  0023.pickle  0024.pickle  0025.pickle  0027.pickle  0029.pickle  0033.pickle  0038.pickle  (+2336 more)
GCTDA/: baseline.py  datasets.py  extendedPersistence.py  filtrations.py  images.py  kernel_density.py
tests/: classification.py  evaluate.py  merge_results.py  run_evaluate.sh  run_evaluate_density.sh  run_evaluate_filtration.sh  run_evaluate_res.sh  run_evaluate_synthetic.sh  run_evaluate_weights.sh  test_images_WPKI.ipynb
tests/Datasets/: convert_graphs.py
(+81905 files in other folders)
